k8s/overlays/custom/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simple-landing-page
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    cert-manager.io/cluster-issuer: letsencrypt-dns
spec:
  ingressClassName: nginx
  rules:
    - host: simple-landing-page.example.com
      http:
        paths:
          - backend:
              service:
                name: simple-landing-page-clusterip
                port:
                  number: 80
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - simple-landing-page.examp
      secretName: simple-landing-page-cert
